# gnome-bluetooth-applet

./: Makefile.am  README  configure.ac
applet/: Makefile.am  bluetooth-applet.desktop.in.in  main.c  notify.c
po/: POTFILES.in  af.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  el.po  en@shaw.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fy.po  ga.po  gl.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  it.po  ja.po  ka.po  kk.po  km.po  kn.po  (+38 more)
properties/: Makefile.am  adapter.c  bluetooth-properties.desktop.in.in  bluetooth.ui  cc-bluetooth-panel.c  cc-bluetooth-panel.h  main.c  org.gnome.Bluetooth.gschema.xml.in  properties-killed-adapter.ui
properties/cut-n-paste/: Makefile.am  cc-panel.h  cc-shell.h
